Fixed color contrast for DEV non-user profile embeds.

--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -159,11 +159,16 @@
       }
     }
 
-    .github-wrapper {
+    .devto-embed-wrapper {
+      display: flex;
+      place-items: center;
       background-color: var(--color-light);
+      padding: 1rem;
 
       iframe {
+        width: 100%;
         border: none;
+        height: auto;
       }
     }
   }
